# CollisionDetection

./: CMakeLists.txt  README.md  main.cpp
include/CollisionDetection/: 3dsloader.h  CollisionDetection.h  CollisionDetectionColdet.h  coldet.h  functions.h  objects3DS.h  terrain.h  types.h
include/Defs/: defs.h
resources/: Messor_II_Model.xml  configGlobal.xml  model.xml
resources/Messor_II_Model/: corpus.3ds  femur.3ds
src/CollisionDetection/: 3dsloader.cpp  CollisionDetectionColdet.cpp  functions.cpp  objects3DS.cpp  terrain.cpp
